--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,9 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is a rails project implementing a game of hangman.
 
-Things you may want to cover:
+So far this has just been generated with rails new. Further documentation to run will come later.
 
-* Ruby version
+== COPYRIGHT
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+©2016 Powershop New Zealand Limited under MIT license
