Add locale for en

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,12 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  # Losing a game
+  game_over: "GAME OVER!"
+  you_won:   "You won"
+  you_lost:  "You lost"
+
+  # Game details
+  you_have_lives_remaining:  "You have %{lives} remaining"
+  currently_guessed_word_is: "Currently guessed word is: %{guessed_word}"
+  you_have_guessed:          "You have guessed: %{guessed_letters}"
