Add locale for guess active record fields

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,4 +1,15 @@
 es:
+  helpers:
+    submit:
+      create: "Crear %{model}"
+      guess:
+        create: "Enviar conjectura"
+
+  activerecord:
+    attributes:
+      guess:
+        guess: Conjectura
+
   # Losing a game
   game_over: "¡JUEGO TERMINADO!"
   you_won:   "Ganaste"
