--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,11 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
+  helpers:
+    submit:
+      guess:
+        create: "Submit guess"
+
   # Losing a game
   game_over: "GAME OVER!"
   you_won:   "You won"
