Locale for word list edit page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,6 +36,7 @@ en:
   # On all views
   Listing_things: "Listing %{things}"
   New_thing: "New %{thing}"
+  Editing_thing: "Editing %{thing}"
   Back: "Back"
   Show: "Show"
   Edit: "Edit"
