--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -25,6 +25,7 @@ fr:
   # On all views
   Listing_things: "Liste des %{things}"
   New_thing: "Nouvelle %{thing}"
+  Editing_thing: "Modifier %{thing}"
   Back: "Arrière"
   Show: "Montrer"
   Edit: "Modifier"
