Add locales for word list show

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,6 +37,7 @@ en:
   Listing_things: "Listing %{things}"
   New_thing: "New %{thing}"
   Editing_thing: "Editing %{thing}"
+  Add_thing: "Add %{thing}"
   Back: "Back"
   Show: "Show"
   Edit: "Edit"
