--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -31,6 +31,10 @@ es:
     one: "1 error"
     other: "%{count} errores"
   errors_prohibited_this_thing_from_being_saved: "%{errors} prohibido esta %{thing} se guarden" # esta is feminine
+  errors:
+    messages:
+      greater_than_or_equal_to: "debe ser mayor que o igual a %{count}"
+      invalid: "no es válido"
 
   # On all views
   Listing_things: "Listado de %{things}"
