--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -27,40 +27,41 @@ es:
         word: "Palabra"
 
   # Errors
-  error:
-    one: "1 error"
-    other: "%{count} errores"
-  errors_prohibited_this_thing_from_being_saved: "%{errors} prohibido esta %{thing} se guarden" # esta is feminine
+  "%{errors} prohibited this %{thing} from being saved": "%{errors} prohibido esta %{thing} se guarden" # esta is feminine
   errors:
     messages:
       greater_than_or_equal_to: "debe ser mayor que o igual a %{count}"
       invalid: "no es válido"
 
-  # On all views
-  Listing_things: "Listado de %{things}"
-  New_thing: "Nuevo %{thing}"
-  Editing_thing: "Editar %{thing}"
-  Add_thing: "Añadir %{thing}"
-  Back: "Espalda"
-  Show: "Mostrar"
-  Edit: "Editar"
-  Destroy: "Destruir"
-
-  # Game show view
-  # Losing a game
-  GAME_OVER: "¡JUEGO TERMINADO!"
-  You_won:   "Ganaste"
-  You_lost:  "Perdiste"
-
+  # Plural things
+  error:
+    one: "1 error"
+    other: "%{count} errores"
   life:
     one: "1 vida"
     other: "%{count} vidas"
 
+  # On all views
+  "Listing %{things}": "Listado de %{things}"
+  "New %{thing}": "Nuevo %{thing}"
+  "Editing %{thing}": "Editar %{thing}"
+  "Add %{thing}": "Añadir %{thing}"
+  "Back": "Espalda"
+  "Show": "Mostrar"
+  "Edit": "Editar"
+  "Destroy": "Destruir"
+
+  # Game show view
+  # Losing a game
+  "GAME OVER!": "¡JUEGO TERMINADO!"
+  "You won":   "Ganaste"
+  "You lost":  "Perdiste"
+
   # Game details
-  You_have_lives_remaining:  "Usted tiene %{lives} restante"
-  Currently_guessed_word_is: "Actualmente es la palabra adivinado: %{guessed_word}"
-  You_have_guessed:          "Usted tiene adivinado: %{guessed_letters}"
+  "You have %{lives} remaining":  "Usted tiene %{lives} restante"
+  "Currently guessed word is": "Actualmente es la palabra adivinado: %{guessed_word}"
+  "You have guessed":          "Usted tiene adivinado: %{guessed_letters}"
 
   # Debug mode
-  DEBUG_MODE: "MODO DE DEPURACIÓN"
-  The_word_is: "La palabra es: %{word}"
+  "DEBUG MODE": "MODO DE DEPURACIÓN"
+  "The word is": "La palabra es: %{word}"
