--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -32,6 +32,9 @@ es:
     messages:
       greater_than_or_equal_to: "debe ser mayor que o igual a %{count}"
       invalid: "no es válido"
+      wrong_length:
+        one: "es la longitud incorrecta (debe ser de 1 carácter)"
+        other: "es la longitud incorrecta (debe ser de %{count} caracteres)"
 
   # Plural things
   error:
