--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -6,6 +6,12 @@ fr:
         create: "Soumettre conjecture"
 
   activerecord:
+    errors:
+      models:
+        guess:
+          attributes:
+            game:
+              is_finished: "est terminé"
     models:
       game:
         one: "Jeu"
@@ -21,6 +27,7 @@ fr:
         starting_lives: "À partir des vies"
       guess:
         guess: "Conjecture"
+        game: "Jeu"
       word_list:
         name: "Nom"
       word:
